# ontogeny

./: .env.example  .gitignore  CODEX_INCREMENTAL_TASKS.md  DEMO_GUIDE.md  DEMO_RECORDING_SCRIPT.md  Dockerfile.blender  Dockerfile.train  Modelfile  Modelfile.maldoror  NEOCORPUS.md  PACKAGING.md  README.md  apply_fix.py  count_quotes.py  electron_log.txt  emotion_code.py  fix_blender.py  fix_blender2.py  fix_blender3.py  fix_blender_final.py  proxies.txt  pyproject.toml  run_linux.sh  run_macos.sh  setup_linux.sh  setup_macos.sh  verify.ps1
.github/workflows/: ci.yml
backend/: agent_manager.py  backend.spec  blender_server.py  blender_simulation.py  blender_worlds.py  build.bat  build_demo.py  demo_fixtures.py  embodiment_transport.py  main.py  mujoco.spec  mujoco_simulation.py  requirements-ui.txt  simulation.py
desktop/: generate_icon.py  package-lock.json  package.json
desktop/main/: index.js
desktop/preload/: preload.js
desktop/renderer/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
desktop/renderer/src/: App.tsx  index.css
desktop/renderer/src/components/: ActivityTimeline.tsx  BlenderEmbed.tsx  BlenderPanel.tsx  CognitiveState.tsx  CommandPalette.tsx  CrawlerPanel.tsx  DemoPanel.tsx  ErrorBoundary.tsx  GoalTree.tsx  KnowledgeGraph.tsx  MaldororIcon.tsx  MaldororPanel.tsx  MemoryExplorer.tsx  MuJoCoEmbed.tsx  MuJoCoPanel.tsx  Panel.tsx  ProductionPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx  TrainingPanel.tsx
desktop/renderer/src/hooks/: useWebSocket.ts
desktop/renderer/src/lib/: utils.ts
desktop/renderer/src/types/: electron.d.ts  index.ts
scripts/: maldoror_dashboard.py  smoke_blender.py  smoke_mujoco.py  train_maldoror.py
src/crawler_agent/: __init__.py  cli_colors.py  main.py  persistence.py
src/crawler_agent/agent/: __init__.py  orchestrator.py
src/crawler_agent/agents/: __init__.py  base.py  orchestrator.py  registry.py  specialized.py
src/crawler_agent/cognitive/: __init__.py  adversarial_trainer.py  agent_variety.py  anatomy_mode.py  architecture_modifier.py  architecture_modify.py  attention.py  backend.py  benchmark.py  benchmark_runner.py  benchmarks.py  blender_sandbox.py  causal_reasoning.py  ci_validator.py  continual_learning.py  contrastive_trainer.py  cross_domain.py  curiosity.py  curriculum.py  custom_model_manager.py  distillation.py  embodiment.py  emergent_curriculum.py  emotional.py  evo_architecture.py  failure_injection.py  fs_access.py  goals.py  knowledge_distiller.py  knowledge_graph.py  learning.py  locomotion.py  manipulation_tasks.py  mcts_planner.py  memory.py  memory_compression.py  meta_learner.py  metacognition.py  model_evaluation.py  model_population.py  (+44 more)
src/crawler_agent/config/: settings.py
src/crawler_agent/crawlers/: __init__.py  academic.py  additional.py  apache.py  base.py  bitbucket.py  codeberg.py  crates.py  discord.py  github.py  gitlab.py  go_dev.py  hackernews.py  huggingface.py  internetarchive.py  jira.py  launchpad.py  maven.py  notion.py  npm_registry.py  nuget.py  pagure.py  pastebin.py  pypi.py  reddit.py  rss.py  rubygems.py  savannah.py  sourceforge.py  stackoverflow.py  webscraper.py  wikipedia.py
src/crawler_agent/crawlers/acquisition/: __init__.py  domain_policies.py  evidence_store.py  knowledge_validator.py  manager.py  observability.py  proxy_manager.py  request_manager.py  research_planner.py  revalidation.py  (+1 more)
src/crawler_agent/processing/: __init__.py  embeddings.py  llm.py
src/crawler_agent/storage/: __init__.py  database.py  docker_manager.py  vector.py
src/crawler_agent/utils/: __init__.py  proxy.py  proxy_fetcher.py  rate_limiter.py
tests/: conftest.py  test_acquisition.py  test_adversarial_trainer.py  test_agent_memory.py  test_api_server.py  test_architecture_modifier.py  test_backend_imports.py  test_blender_simulation.py  test_cli.py  test_contrastive.py  test_embodiment_transport.py  test_emergent_curriculum.py  test_evaluation.py  test_frontend.py  test_maldoror_e2e.py  test_mujoco_simulation.py  test_population.py  test_production.py  test_self_training.py  test_smoke.py  test_world_selector.py
