[project]
name = "crawler-agent"
version = "0.1.0"
description = "AI-powered web crawler agent for code platforms and academic sources"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    
    # HTTP & Crawling
    "httpx>=0.27",
    "aiohttp>=3.9",
    "scrapy>=2.11",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "fake-useragent>=1.4",
    
    # Storage
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "chromadb>=0.4",
    "redis>=5.0",
    
    # Processing
    "openai>=1.12",
    "tiktoken>=0.6",
    "sentence-transformers>=2.3",
    
    # Academic APIs
    "arxiv>=2.1",
    
    # Utilities
    "tenacity>=8.2",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "orjson>=3.9",
    
    # Cognitive Architecture
    "networkx>=3.2",  # Knowledge graphs
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
crawler-agent = "crawler_agent.main:main"
cognitive-agent = "crawler_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
