[project]
name = "crawler-agent"
version = "0.1.0"
description = "Proto-AGI cognitive agent framework with 35 web crawlers, multi-agent collaboration, recursive self-modification, four-tier hybrid LLM routing, Blender physics sandbox, sensor simulation, YOLOv8 vision, and a custom fine-tuned model (Maldoror)"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    
    # HTTP & Crawling
    "httpx>=0.27",
    "httpx[socks]>=0.27",
    "socksio>=0.7",
    "aiohttp>=3.9",
    "scrapy>=2.11",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "fake-useragent>=1.4",
    "feedparser>=6.0",
    
    # Storage
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "chromadb>=0.4",
    "redis>=5.0",
    
    # Processing
    "openai>=1.12",
    "tiktoken>=0.6",
    "sentence-transformers>=2.3",
    
    # Academic APIs
    "arxiv>=2.1",
    
    # Utilities
    "tenacity>=8.2",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "orjson>=3.9",
    
    # Cognitive Architecture
    "networkx>=3.2",  # Knowledge graphs
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
crawler-agent = "crawler_agent.main:main"
cognitive-agent = "crawler_agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "F401",   # unused imports (common in __init__.py re-exports)
    "F811",   # redefinition of unused name
    "F821",   # undefined name (false positives in template strings)
    "E402",   # module-level import not at top
    "B008",   # function call in default argument
    "UP035",  # deprecated typing imports (intentional for Python 3.11 compat)
    "E741",   # ambiguous variable name
    "B007",   # unused loop control variable
    "B904",   # raise without from inside except
    "F524",   # string format missing arguments (template strings)
    "F601",   # multi-value repeated key literal
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F811"]
"tests/*" = ["E402"]
"backend/*" = ["E402"]
"src/crawler_agent/cognitive/patch_verifier.py" = ["E999"]
"src/crawler_agent/cognitive/blender_sandbox.py" = ["E999", "F821"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
